# VPlugin

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  SECURITY.md
.github/workflows/: default.yml  macosx.yml  win32.yml
spec/: PluginFormat.md
src/: error.rs  lib.rs  plugin.rs  plugin_manager.rs  shareable.rs  tutorial.rs
