[package]
name        = "vplugin"
version     = "0.2.0"
edition     = "2021"
repository  = "https://github.com/VPlugin/VPlugin.git"
description = "A Rust framework that allows projects to create and use a plugin system."
license     = "Apache-2.0"
authors     = [ "Aggelos Tselios <aggelostselios777@gmail.com" ]
keywords    = [ "plugin", "framework", "ffi", "rust" ]

[dependencies]
serde        = "1.0.152" # Needed for serialization / deserialization
serde_derive = "1.0.152" # Needed for TOML parsing.
zip          = "0.6.3"   # Needed for decompressing plugins.
toml         = "0.7.1"   # Config file language for plugins.
libloading   = "0.7"     # Used to instanciate the module.
log          = "0.4.17"  # Used as a way to print errors.
thiserror    = "1.0.38"  # For string explanations of VPluginError
is_superuser = "1.0.1"   # To see whether we are running as root or not.

[features]
default              = [ ]
non_reusable_plugins = [ ]

[lib]
doctest    = false
crate-type = [
        "rlib",
]

